<resources>
    <string name="app_name">ScoutOut</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test_nagrywania_d_wi_ku">Test nagrywania dźwięku</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player">Gracz</string>
    <string name="gm">Mistrz gry</string>
    <string name="start">Start</string>
    <string name="user">Użytkownik</string>
    <string name="edit_tasks">Edycja zadań</string>
    <string name="accept_tasks">Akceptacja zgłoszeń</string>
    <string name="generate_qr">Wygeneruj QR</string>
    <string name="name">Nazwa użytkownika</string>
    <string name="title">Tytuł</string>
    <string name="content">Treść</string>
    <string name="answer">Odpowiedź</string>
    <string name="answer_type">Rodzaj odpowiedzi:</string>
    <string name="answer_type_text">Tekstowa</string>
    <string name="answer_type_picture">Zdjęcie</string>
    <string name="answer_type_audio">Nagranie audio</string>
    <string name="answer_type_nav">Lokalizacja GPS</string>
    <string name="answer_verb">Odpowiedz</string>
    <string name="game_description">Opis gry</string>
    <string name="game_start_automatically">Automatyczny start gry</string>
    <string name="game_start_hour">Godzina rozpoczęcia gry</string>
    <string name="game_end_condition">Warunek zakończenia gry:</string>
    <string name="game_end_with_time">Ustalona godzina zakończenia</string>
    <string name="game_end_with_points">Ustalona liczba punktów</string>
    <string name="scan_qr">Skanuj kod QR / Kreskowy</string>
    <string name="tasks_list">Lista zadań:</string>
    <string name="refresh">odśwież</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="add_task">Zapisz zadanie</string>
    <string name="accept_task">Zaakceptuj</string>
    <string name="decline_task">Odrzuć</string>
    <string name="team">Drużyna</string>
    <string name="textView">Example tasks</string>
    <string name="buttonPost">post task</string>
    <string name="buttonGet">get tasks</string>
    <string name="demo">Demo</string>
    <string name="server_error">Błąd komunikacji z serwerem, spróbuj ponownie</string>
    <string name="server_success">Wysłano</string>
    <string name="save">Zapisz</string>
    <string name="share">Udostępnij</string>
    <string name="QR_image">Kod QR</string>
    <string name="QRgenerationSuccess">Wygenerowano kod QR</string>
    <string name="create_game">Tworzenie gry</string>
    <string name="task_completion">Ukończenie zadań</string>
    <string name="nav_header_title">Nawigacja</string>
    <string name="menu_home">home</string>
    <string name="menu_nav_user_login">Login</string>
    <string name="menu_nav_player_tasks">Lista zadań</string>
    <string name="menu_nav_gm_tasks">Zadania</string>
    <string name="menu_nav_gm_list_to_accept">Sprawdź odpowiedzi</string>
    <string name="menu_nav_gm_qr_generator">Wygeneruj kod QR</string>
    <string name="nav_menu_player">Gracz</string>
    <string name="nav_menu_GM">Mistrz Gry</string>
    <string name="register_in_our_application">Zarejestruj się w naszej aplikacji</string>
    <string name="password">Hasło</string>
    <string name="register">Zarejestruj się</string>
    <string name="task_score_info">Liczba punktów za zadanie: </string>
    <string name="user_name">Nazwa użytkownika</string>
    <string name="login_to_your_account">Zaloguj się na swoje konto</string>
    <string name="user_name_login">Nazwa użytkownika</string>
    <string name="password_login">Hasło</string>
    <string name="log_in">Zaloguj się</string>
    <string name="or">lub</string>
    <string name="register_in_login">Zarejestruj się</string>
    <string name="task_description">Szczegóły zadania</string>
    <string name="login_failed">Nie udało się zalogować</string>
    <string name="invalid_username">Nieprawidłowa nazwa użytkownika</string>
    <string name="invalid_password">Nieprawidłowe hasło</string>
    <string name="add_team">Utwórz</string>
    <string name="team_name">Nazwa drużyny</string>
    <string name="join">Dołącz</string>
    <string name="joined_team">Dołączono do drużyny</string>
    <string name="failed_join_team">Nie udało się dołączyć do drużyny</string>
    <string name="answer_accepted">Zaakceptowano odpowiedź</string>
    <string name="answer_refused">Odrzucono odpowiedź</string>
    <string name="no_title">Brak tytułu!</string>
    <string name="wrong_point_number">Nieprawidłowa liczba punktów!</string>
    <string name="no_point_number">Nie podano liczby punktów!</string>
    <string name="no_active_games">Brak aktywnych gier</string>
    <string name="share_qr">Udostępnij kod QR</string>
    <string name="qr_saved">Zapisano kod QR</string>
    <string name="starting_game">Rozpoczynanie gry</string>
    <string name="flashlight_info">Włącz lampę błyskową, używając przycisku VolumeUp.</string>
    <string name="qr_scanned">Zeskanowano kod QR: </string>
    <string name="qr_not_scanned">Nie zeskanowano jeszcze kodu QR</string>
    <string name="error_file">Błąd podczas tworzenia pliku</string>
    <string name="success">Sukces</string>
    <string name="enter_number">Wprowadź liczbę</string>
    <string name="game_saved">Zapisano grę</string>
    <string name="error_game_save">Błąd zapisywania gry!</string>
    <string name="save_game_before_start">Należy zapisać grę przed wystartowaniem jej</string>
    <string name="add_game_title">Podaj tytuł gry</string>
    <string name="wrong_begindate_format">Nieprawidłowy format daty rozpoczęcia!</string>
    <string name="wrong_enddate_format">Nieprawidłowy format daty zakończenia!</string>
    <string name="team_created">Pomyślnie utworzono drużynę</string>
    <string name="error_team_create">Błąd przy tworzeniu drużyny</string>
    <string name="waiting_for_players">oczekiwanie na graczy…</string>
    <string name="waiting_for_players_capital">Oczekiwanie na graczy…</string>
    <string name="game_playing">w grze</string>
    <string name="game_play">Graj</string>
    <string name="user_not_in_team">Nie jesteś w żadnej drużnie :(</string>
    <string name="game_finished">ukończona</string>
    <string name="game_unknown">status nieznany</string>
    <string name="game_configuring">gra w tworzeniu</string>
    <string name="edit">Edytuj</string>
    <string name="register_successful">Zarejestrowano pomyślnie</string>
    <string name="error_register">Błąd przy rejestracji</string>
    <string name="login_successful">Zalogowano pomyślnie</string>
    <string name="error_login">Błąd przy logowaniu</string>
    <string name="join_team">Dołącz do istniejącej drużyny</string>
    <string name="create_team">Stwórz własną drużynę</string>
    <string name="game_name">Nazwa gry</string>
    <string name="start_time">Data rozpoczęcia</string>
    <string name="end_time">Data zakończenia</string>
    <string name="previous_answers">Poprzednie odpowiedzi</string>
    <string name="upload_answer">Wyślij odpowiedź</string>
    <string name="start_game">Rozpocznij grę</string>
    <string name="teams_list">Drużyny biorące udział w grze:</string>
    <string name="points_number">Liczba punktów:</string>
    <string name="task_name">Tytuł zadania</string>
    <string name="games_list">Lista gier</string>
    <string name="team_creator">Twórca drużyny: </string>
    <string name="answer_task">Odpowiedz</string>
    <string name="answer_check">Oceń</string>
    <string name="take_picture">Zrób zdjęcie</string>
    <string name="qr_scan_result">Wynik skanowania kodu QR</string>
    <string name="correct_answer">Poprawna odpowiedź: </string>
    <string name="ranking">ranking</string>

</resources>
