<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/loginFragment"
            android:title="@string/menu_nav_user_login" />
        <item
            android:id="@+id/GMlistTasksFragment"
            android:title="@string/menu_nav_gm_tasks" />
        <item
            android:id="@+id/GMListToAcceptFragment"
            android:title="@string/menu_nav_gm_list_to_accept" />
        <item
             android:id="@+id/GMqrGeneratorFragment"
            android:title="@string/menu_nav_gm_qr_generator" />
        <item
            android:id="@+id/playerTeamRankingsFragment"
            android:title="@string/ranking" />
    </group>


</menu>