<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:id="@+id/answerText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/answer"
        android:inputType="textMultiLine"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/qrResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Wynik skanowania kodu QR" />

    <Button
        android:id="@+id/scanQRButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/scan_qr" />

    <Button
        android:id="@+id/photoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Zrób zdjęcie" />

    <Button
            android:id="@+id/answerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:text="@string/answer_verb" />

</LinearLayout>

