<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.gm.GMEditTaskFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleText"
            android:layout_width="395dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:inputType="textMultiLine"
            android:hint="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/content"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taskScoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/task_score_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/taskScoreText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:autofillHints=""
                android:text=""
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/qrAnswerContainer"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taskAnswerInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:gravity="center"
                android:text="Poprawna odpowiedź: "
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/taskAnswerText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:gravity="center"
                android:inputType="number"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/answer_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp">

        </TextView>

        <RadioGroup
            android:id="@+id/answerTypeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:checkedButton="@id/answerTypeTextRadioButton">


            <RadioButton
                android:id="@+id/answerTypeTextRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/answer_type_text" />
            <RadioButton
                android:id="@+id/answerTypeQRRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/QR_image" />
            <RadioButton
                android:id="@+id/answerTypePictureRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/answer_type_picture" />
            <RadioButton
                android:id="@+id/answerTypeAudioRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/answer_type_audio" />
            <RadioButton
                android:id="@+id/answerTypeNavigationRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/answer_type_nav" />


        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:text="@string/add_task" />
    </LinearLayout>
</ScrollView>

