<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_background"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="110dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-70dp"

        android:text="@string/log_in" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-140dp"
        android:text="@string/register_in_login"
        tools:ignore="ExtraText" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:layout_marginBottom="270dp"
        android:src="@mipmap/logo"
        app:shapeAppearanceOverlay="@style/Circular" />


</FrameLayout>