<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".TaskAnswerFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="452dp"
        android:layout_weight="3"
        android:ems="10"
        android:gravity="start|top"
        android:contentDescription="@string/QR_image"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.05">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:text="@string/share"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_margin="10dp"
            android:layout_weight="2.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:layout_gravity="center"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>

