<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.gm.GMAddTaskFragment"
    android:orientation="vertical">


    <EditText
        android:id="@+id/titleText"
        android:layout_width="395dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/content"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/taskScoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/task_score_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/taskScoreText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:text=""
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:text="@string/add_task" />

</LinearLayout>

