<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="220dp"
        android:textColor = "@color/black"
        android:textSize = "24sp"
        android:textStyle="bold|italic"
        android:text="@string/previous_answers" />

    <ListView
        android:id="@+id/previous_answers_list"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/go_to_upload"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-230dp"
        android:text="@string/upload_answer"
        tools:ignore="ExtraText" />

    <Button
        android:id="@+id/go_to_task_description"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-300dp"
        android:text="@string/task_description"
        tools:ignore="ExtraText" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="300dp"
        app:shapeAppearanceOverlay="@style/Circular"
        android:src="@mipmap/logo" />


</FrameLayout>